--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./main/index.js",
     "dev": "nodemon ./main/index.js",
     "lint": "eslint ./main",
-    "lint:fix": "eslint ./main --fix"
+    "lint:fix": "eslint ./main --fix",
+    "test": "node ./main/tests.js"
   },
   "author": "",
   "license": "ISC",
